--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.22.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^87.0.0",
+    "node-sass": "^6.0.1",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
+    "react-github-calendar": "^2.0.2",
+    "react-icons": "^4.2.0",
+    "react-particles-js": "^3.5.3",
+    "react-router-dom": "^5.3.0",
+    "tsparticles": "^1.35.2",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
