--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "googleapis": "^87.0.0",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
+    "react-custom-scrollbar": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
