--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "googleapis": "^87.0.0",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13",
