--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.13",
     "react-custom-scrollbar": "^1.0.0",
     "react-custom-scrollbars": "^4.2.1",
+    "react-toastify": "^8.0.3",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {},
